# oop3

./: CMakeLists.txt  main.cpp
include/: Array.h  Figure.h  Pentagon.h  Rhombus.h  Trapezoid.h
src/: FigureArray.cpp  Pentagon.cpp  Rhombus.cpp  Trapezoid.cpp
test/: test_figure_array.cpp  test_pentagon.cpp  test_rhombus.cpp  test_trapezoid.cpp
